--- a/Bulky/BulkyWeb.csproj
+++ b/Bulky/BulkyWeb.csproj
@@ -21,4 +21,9 @@
     <ProjectReference Include="../Bulky.Utility/Bulky.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas/Admin/Models/" />
+    <Folder Include="Areas/Customer/" />
+  </ItemGroup>
+
 </Project>
